--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,20 @@ body {
   width: max-content;
 }
 
+.question-number {
+  margin-top: 20px;
+}
+.question-number .attempt {
+  background-color: green;
+}
+.question-number .not-attempt {
+  background-color: red;
+}
+
+.exam-body {
+  margin-top: 10rem;
+}
+
 .exam-sec {
   border: 0.5rem solid #4b3cef;
 }
@@ -129,100 +143,14 @@ button {
   margin: 4px;
 }
 
-.wrapper {
-  box-shadow: 0px 5px 15px 0px rgba(128, 128, 128, 0.1490196078);
-  border-radius: 10px;
-  margin: 0 auto;
-  border: 1px solid #4b3cef;
-}
-.wrapper p {
-  border-bottom: 1px solid rgba(0, 0, 83, 0.2588235294);
-  padding-bottom: 15px;
-}
-.wrapper p b {
-  font-size: 1.1rem;
-}
-.wrapper p:nth-last-child(1) {
-  margin: 0;
-  border: 0;
-  padding: 0;
-}
-.wrapper .country-flag {
-  width: 40px;
-}
-
 .buttons {
   margin: auto;
-}
-
-.instruction {
-  max-width: 600px;
-}
-.instruction li {
-  line-height: 2.5;
-  font-weight: 500;
-}
-.instruction li p {
-  font-size: 1rem;
-}
-
-.skills {
-  width: 100% !important;
-}
-.skills .skill-box {
-  background-color: rgba(255, 255, 255, 0.4196078431);
-  width: 100%;
-  margin: 0 auto;
-  border-radius: 20px;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  border: 1px solid #e7e7e7;
-  transition: 0.4s all;
-  cursor: pointer;
-}
-.skills .skill-box .nmbr-img {
-  width: 100px;
-}
-.skills .skill-box:hover {
-  border: 1px solid #4b3cef;
-  box-shadow: 0px 5px 10px rgb(205, 205, 205);
-  background-color: #ffffff;
-}
-.skills .skill-box:hover a {
-  color: #000000;
-}
-.skills .skill-box img {
-  width: 150px;
-  border-radius: 10px;
-}
-.skills a {
-  color: #000000;
 }
 
 h5 {
   color: #4b3cef;
   text-align: center;
   font-weight: 600;
-}
-
-.aspect-quiz .box {
-  background-color: rgba(255, 255, 255, 0.4588235294);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  border: 1px solid #4b3cef;
-  border-radius: 10px;
-}
-.aspect-quiz .box .question-box label {
-  font-size: 1rem;
-  font-weight: 500;
-  color: rgb(107, 107, 107);
-}
-.aspect-quiz .box .quiz-img {
-  border-radius: 10px;
-  overflow: hidden;
-}
-.aspect-quiz form {
-  max-width: 800px;
 }
 
 .copyright {
@@ -280,28 +208,6 @@ h5 {
 }
 .nav-pills .active label {
   color: #ffffff !important;
-}
-
-.upload-img .image-preview {
-  max-width: 300px;
-  max-height: 300px;
-  border: 1px solid #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.upload-img .preview {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.tab-content form label {
-  transition: 0.3s all;
-}
-.tab-content form input:focus {
-  border-color: #000053;
-  box-shadow: 0px 5px 7px rgba(59, 44, 124, 0.2235294118);
 }
 
 .tooltip {
