--- a/student-panel/assets/css/style.scss
+++ b/student-panel/assets/css/style.scss
@@ -162,7 +162,7 @@ body {
     max-width: 83%;
     margin-left: auto;
     .content-header{
-        background-color: var(--background);
+        background-color: var(--primary);
         border-radius: 10px;
         #toggle-button{
             color: var(--primary) !important;
@@ -174,8 +174,8 @@ body {
                 border-radius: 100px;
                 padding: 5px;
                 font-size: 0.5rem;
-                background-color:var(--primary);
-                color: var(--background);
+                background-color:var(--background);
+                color: var(--primary);
             }
             button{
                 background-color: transparent;
@@ -184,7 +184,7 @@ body {
                     display: none;
                 }
                 svg{
-                    fill: var(--primary);
+                    fill: var(--background);
                 }
             }
             .dropdown-menu{
@@ -205,7 +205,7 @@ body {
                     display: none;
                 }
                 svg{
-                    fill: var(--primary);
+                    fill: var(--background);
                 }
             }
             .dropdown-menu{
